--- a/src/components/shared/launchCard/launchCard.module.css
+++ b/src/components/shared/launchCard/launchCard.module.css
@@ -38,3 +38,13 @@
     }
 
  }
+
+ @media (max-width: 521px) { 
+    .launchCard_body{
+        height: 10rem !important;
+    }
+    .launchCard_img{
+        height: 10rem !important;
+    }
+
+ }
