--- a/src/components/shared/launchCard/launchCard.module.css
+++ b/src/components/shared/launchCard/launchCard.module.css
@@ -1,15 +1,11 @@
-.launchCard_img{
-    object-fit: cover;
-    width: 100%;
-    height: 15rem !important;
-}
 
 .launchCard_body{
-    height: 15rem !important;
+    height: 18rem !important;
+    color: white !important;
 }
 
 
-@media (max-width: 1570px) { 
+/* @media (max-width: 1570px) { 
     .launchCard_body{
         height: 17rem !important;
     }
@@ -17,8 +13,8 @@
         height: 17rem !important;
     }
 
- }
-
+ } */
+/* 
  @media (max-width: 1270px) { 
     .launchCard_body{
         height: 19rem !important;
@@ -37,4 +33,4 @@
         height: 15rem !important;
     }
 
- }
+ } */
